zerocho - 반응속도 체크

--- a/react-tutorials/zerocho/index.html
+++ b/react-tutorials/zerocho/index.html
@@ -1,11 +1,27 @@
 <html>
   <head>
     <title>끝말잇기</title>
+    <style>
+      #screen {
+        width: 300px;
+        height: 200px;
+        text-align: center;
+        user-select: none;
+      }
+      #screen.waiting {
+        background-color: aqua;
+      }
+      #screen.ready {
+        background-color: red;
+        color: white;
+      }
+      #screen.now {
+        background-color: greenyellow;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
-    <script src="./app.js">
-      
-    </script>
+    <script src="./app.js"></script>
   </body>
 </html>
