--- a/react-tutorials/zerocho/index.html
+++ b/react-tutorials/zerocho/index.html
@@ -18,6 +18,11 @@
       #screen.now {
         background-color: greenyellow;
       }
+      #computer {
+        width: 140px;
+        height: 200px;
+        background-position: 0 0;
+      }
     </style>
   </head>
   <body>
